[package]
name = "arq-s3"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arq-storage = { path="../arq-storage" }
futures = "0.3"
log="0.4"
rusoto_core="0.46"
rusoto_s3="0.46"
trait-async = "0.1"