[package]
name = "arq"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"

[dependencies]
arq-crypto = { path="../arq-crypto" }
arq-storage = { path="../arq-storage" }
arq-s3 = { path="../arq-s3" }
futures = "0.3"
log="0.4"
plist="1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }