[package]
name = "arq"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"

[dependencies]
arq-crypto = { path="../arq-crypto" }
arq-s3 = { path="../arq-s3" }
arq-storage = { path="../arq-storage" }
chrono = "0.4"
flate2 = "1.0.20"
futures = "0.3"
hex = "0.4"
log="0.4"
nom = "6.1"
plist="1.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde"] }