[package]
name = "throttled"
version = "0.1.0"
authors = ["Trent Clarke <trent.clarke@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"

[dev-dependencies]
rand = "0.8"
tokio = { version = "1.4", features = ["time", "rt", "macros"] } 